--- a/blog-gastronomia/foundation/css/app.css
+++ b/blog-gastronomia/foundation/css/app.css
@@ -16,3 +16,19 @@ body
 {
 	color: white;
 }
+.mt1
+{
+	margin-top: 1rem;
+}
+.mt2
+{
+	margin-top: 2rem;
+}
+.mt3
+{
+	margin-top: 3rem;
+}
+.mt4
+{
+	margin-top: 4rem;
+}
