--- a/blog-gastronomia/foundation/css/app.css
+++ b/blog-gastronomia/foundation/css/app.css
@@ -1,16 +1,16 @@
 body
 {
-/*
+
     background-image:url(../img/fondo.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-*/
+
 }
 .fondo
 {
-	background:hsla(177,80%,38%,0.35);
+	background:hsla(0,0%,0%,0.38);
 }
 .titulo
 {
@@ -31,4 +31,18 @@ body
 .mt4
 {
 	margin-top: 4rem;
+}
+.m0
+{
+	margin: 0!important;
+}
+.border
+{
+	border: hsla(0,0%,61%,1.00) solid 1px;
+	border-radius: 7px;
+	
+}
+.comentarios
+{
+	color:blue
 }
