--- a/blog-turismo/materialize/css/estilos-personalizados.css
+++ b/blog-turismo/materialize/css/estilos-personalizados.css
@@ -41,3 +41,18 @@ body
 {
 	margin-top: 1rem;
 }
+.lugar
+{
+	margin-top: 1rem;
+	float: left;
+	margin-bottom: 2rem;
+	margin-right: 2rem
+}
+.mt
+{
+	margin:  1rem;
+}
+.texto
+{
+	text-align: justify!important;
+}
