--- a/blog-turismo/materialize/css/estilos-personalizados.css
+++ b/blog-turismo/materialize/css/estilos-personalizados.css
@@ -56,3 +56,15 @@ body
 {
 	text-align: justify!important;
 }
+svg a
+{
+	transition-property: all;
+	transition-duration: 0.5s;
+	
+}
+svg a:hover
+       { opacity: 0.5;
+	 transform: scale(1.1);
+		    
+		 
+} 
