--- a/blog-turismo/materialize/css/estilos-personalizados.css
+++ b/blog-turismo/materialize/css/estilos-personalizados.css
@@ -68,3 +68,22 @@ svg a:hover
 		    
 		 
 } 
+
+   .input-field label{
+     color: white;
+}
+form i
+{
+	color: white;
+}
+#icon_prefix
+{
+    color: white;
+    
+	
+}
+
+   
+   
+
+        
